--- a/index.html
+++ b/index.html
@@ -1,12 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script src="https://cdn.jsdelivr.net/npm/vue"></script>
     <meta charset="utf-8">
     <title>vue_test</title> 
   </head>
   <body>
-    <div id="app"></div>
-    <script src="https://cdn.jsdelivr.net/npm/vue"></script>
+    <div id="app">
+      {{message}}
+    </div>
     <script src="vue.js"></script>
+    
   </body>
 </html>
