--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <div id="app">
       {{message}}
     </div>
+    <div id="app2">
+      <button @click='app.message="Goodbuy, world"'>Поменять приветствие</button>
+    </div>
     <script src="vue.js"></script>
     
   </body>
