Задание 8. Получил ссылку на элемент кнопки при помощи атрибута refs. Создал метод rename, который изменяет значение кнопки с "поменять приветствие" на "попрощаться". Также объединил событие с предыдущего задания с этим в метод rename.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
       {{message}}
     </div>
     <div id="app2">
-      <button @click='app.message="Goodbuy, world"'>Поменять приветствие</button>
+      <button ref="change"
+              @click='rename'
+      >Поменять приветствие
+      </button>
     </div>
     <script src="vue.js"></script>
     
